<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/card_radius_small"
    card_view:cardElevation="@dimen/card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="@dimen/movie_icon_width"
            android:layout_height="@dimen/movie_icon_height" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:layout_toEndOf="@id/iv_movie"
            android:text="@string/txt_placeholder_movie_name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_movie_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_name"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_toEndOf="@id/iv_movie"
            android:text="@string/txt_placeholder_movie_type"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_type"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_toEndOf="@id/iv_movie"
            android:text="@string/txt_placeholder_movie_popularity"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rb_movie"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_popularity"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@id/iv_movie" />

        <Button
            android:id="@+id/btn_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_movie"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_medium"
            android:clickable="true"
            android:foreground="@drawable/ripple_primary"
            android:text="@string/btn_movie_overview"
            android:textColor="@color/white"
            android:theme="@style/MovieOverviewButton" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_24dp" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_rating_text"
                android:text="7.4"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_movie"
            android:layout_alignRight="@id/iv_movie"
            android:background="@color/transparent"
            android:padding="@dimen/margin_card_medium"
            android:src="@drawable/ic_crop_free_24dp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
